--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "netlify dev",
+    "build": "echo 'No build step required for serverless functions'",
+    "deploy": "netlify deploy"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.10.1"
   }
 }
